feat: ✨ 实现基于注解的消息分发,参数注入,详见@MessageMapping feat: ✨ 实现了一个基于@MessageMapping的示例,见RollPlugin.java